# Order_reveal_FHE

./: .gitignore  README.md  orhe_smoke
.cargo_orhe/: .global-cache
build-local/: CMakeCache.txt
build-local-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-local-mingw/libtfhe/: Makefile  cmake_install.cmake
build-real-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake
build-real-gnu/libtfhe/: Makefile  cmake_install.cmake
build-semantic-mock/: CMakeCache.txt
build-semantic-mock-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-semantic-mock-mingw/libtfhe/: Makefile  cmake_install.cmake
build-semantic-mock-portable/: CMakeCache.txt  Makefile  cmake_install.cmake
build-semantic-mock-portable-v2/: CMakeCache.txt  Makefile  cmake_install.cmake
build-semantic-mock-portable-v2/libtfhe/: Makefile  cmake_install.cmake
build-semantic-mock-portable/libtfhe/: Makefile  cmake_install.cmake
build-semantic-real-portable/: CMakeCache.txt  Makefile  attack_aggregate_summary.csv  attack_debug_report.txt  attack_episode_summary.csv  attack_trace.csv  cmake_install.cmake  derived_registration_f3_sample.csv  derived_registration_f6_sample.csv  derived_registration_sample.csv  orhe_attack_debug_transcript.txt  threshold_checkpoint_sweep_summary.csv  threshold_smoke_post.csv  tmp_orhe_dims.cpp
rust/orhe-proof-backend/: Cargo.toml
rust/orhe-proof-backend/src/: lib.rs  semantic.rs
scripts/: aggregate_paper_sweep.ps1  aggregate_paper_sweep.py  run_paper_sweep.ps1  run_paper_sweep.sh
src/: CMakeLists.txt
src/include/: orhe.h  tfhe.h  (+2 more)
(+120 files in other folders)
