[package]
name = "orhe_proof_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "orhe_proof_backend"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
sha2 = "0.10"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
bincode = "1.3"

[patch."https://github.com/0xPolygonZero/plonky2"]
plonky2 = { path = "../../.cargo_orhe/git/checkouts/plonky2-38ade690d54e102c/5d9da5a/plonky2" }
